// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarGroup /> should accept data-analytics attribute 1`] = `
.c1.c1.c1.c1.c1 {
  background-color: hsla(0,0%,100%,1);
}

.c3.c3.c3.c3.c3 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c4.c4.c4.c4.c4 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(200,84%,44%,0.09);
}

.c4.c4.c4.c4.c4 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c7.c7.c7.c7.c7 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(150,100%,32%,0.09);
}

.c7.c7.c7.c7.c7 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c9.c9.c9.c9.c9 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(4,74%,49%,0.09);
}

.c9.c9.c9.c9.c9 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c6.c6.c6.c6.c6 {
  color: hsla(200,84%,37%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(4,74%,49%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0.c0.c0.c0.c0 > *:not(:first-child) {
  margin-left: -18px;
  z-index: 2;
}

<div>
  <div
    class=" c0"
    data-analytics-avatar-group="blade-team"
    data-blade-component="avatar-group"
    data-testid="data-analytics-test"
    role="group"
  >
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          color="information"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c6"
              data-blade-component="text"
            >
              NK
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          color="positive"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c8"
              data-blade-component="text"
            >
              AN
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c9"
          color="negative"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              RB
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvatarGroup /> should render AvatarGroup with size large 1`] = `
.c1.c1.c1.c1.c1 {
  background-color: hsla(0,0%,100%,1);
}

.c3.c3.c3.c3.c3 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c4.c4.c4.c4.c4 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 48px;
  height: 48px;
  width: 48px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(200,84%,44%,0.09);
}

.c4.c4.c4.c4.c4 img {
  display: block;
  height: 48px;
  width: 48px;
  border-radius: 9999px;
  object-fit: cover;
}

.c7.c7.c7.c7.c7 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 48px;
  height: 48px;
  width: 48px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(150,100%,32%,0.09);
}

.c7.c7.c7.c7.c7 img {
  display: block;
  height: 48px;
  width: 48px;
  border-radius: 9999px;
  object-fit: cover;
}

.c9.c9.c9.c9.c9 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 48px;
  height: 48px;
  width: 48px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(4,74%,49%,0.09);
}

.c9.c9.c9.c9.c9 img {
  display: block;
  height: 48px;
  width: 48px;
  border-radius: 9999px;
  object-fit: cover;
}

.c6.c6.c6.c6.c6 {
  color: hsla(200,84%,37%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(4,74%,49%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0.c0.c0.c0.c0 > *:not(:first-child) {
  margin-left: -24px;
  z-index: 2;
}

<div>
  <div
    class=" c0"
    data-blade-component="avatar-group"
    role="group"
  >
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          color="information"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c6"
              data-blade-component="text"
            >
              NK
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          color="positive"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c8"
              data-blade-component="text"
            >
              AN
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c9"
          color="negative"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              RB
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvatarGroup /> should render AvatarGroup with size medium 1`] = `
.c1.c1.c1.c1.c1 {
  background-color: hsla(0,0%,100%,1);
}

.c3.c3.c3.c3.c3 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c4.c4.c4.c4.c4 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(200,84%,44%,0.09);
}

.c4.c4.c4.c4.c4 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c7.c7.c7.c7.c7 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(150,100%,32%,0.09);
}

.c7.c7.c7.c7.c7 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c9.c9.c9.c9.c9 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(4,74%,49%,0.09);
}

.c9.c9.c9.c9.c9 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c6.c6.c6.c6.c6 {
  color: hsla(200,84%,37%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(4,74%,49%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0.c0.c0.c0.c0 > *:not(:first-child) {
  margin-left: -18px;
  z-index: 2;
}

<div>
  <div
    class=" c0"
    data-blade-component="avatar-group"
    role="group"
  >
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          color="information"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c6"
              data-blade-component="text"
            >
              NK
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          color="positive"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c8"
              data-blade-component="text"
            >
              AN
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c9"
          color="negative"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              RB
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvatarGroup /> should render AvatarGroup with size small 1`] = `
.c1.c1.c1.c1.c1 {
  background-color: hsla(0,0%,100%,1);
}

.c3.c3.c3.c3.c3 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 28px;
  height: 28px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c4.c4.c4.c4.c4 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 28px;
  height: 28px;
  width: 28px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(200,84%,44%,0.09);
}

.c4.c4.c4.c4.c4 img {
  display: block;
  height: 28px;
  width: 28px;
  border-radius: 9999px;
  object-fit: cover;
}

.c7.c7.c7.c7.c7 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 28px;
  height: 28px;
  width: 28px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(150,100%,32%,0.09);
}

.c7.c7.c7.c7.c7 img {
  display: block;
  height: 28px;
  width: 28px;
  border-radius: 9999px;
  object-fit: cover;
}

.c9.c9.c9.c9.c9 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 28px;
  height: 28px;
  width: 28px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(4,74%,49%,0.09);
}

.c9.c9.c9.c9.c9 img {
  display: block;
  height: 28px;
  width: 28px;
  border-radius: 9999px;
  object-fit: cover;
}

.c6.c6.c6.c6.c6 {
  color: hsla(200,84%,37%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(4,74%,49%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0.c0.c0.c0.c0 > *:not(:first-child) {
  margin-left: -14px;
  z-index: 2;
}

<div>
  <div
    class=" c0"
    data-blade-component="avatar-group"
    role="group"
  >
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          color="information"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c6"
              data-blade-component="text"
            >
              NK
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          color="positive"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c8"
              data-blade-component="text"
            >
              AN
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c9"
          color="negative"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              RB
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvatarGroup /> should render AvatarGroup with size xlarge 1`] = `
.c1.c1.c1.c1.c1 {
  background-color: hsla(0,0%,100%,1);
}

.c3.c3.c3.c3.c3 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 56px;
  height: 56px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c4.c4.c4.c4.c4 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 56px;
  height: 56px;
  width: 56px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(200,84%,44%,0.09);
}

.c4.c4.c4.c4.c4 img {
  display: block;
  height: 56px;
  width: 56px;
  border-radius: 9999px;
  object-fit: cover;
}

.c7.c7.c7.c7.c7 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 56px;
  height: 56px;
  width: 56px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(150,100%,32%,0.09);
}

.c7.c7.c7.c7.c7 img {
  display: block;
  height: 56px;
  width: 56px;
  border-radius: 9999px;
  object-fit: cover;
}

.c9.c9.c9.c9.c9 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 56px;
  height: 56px;
  width: 56px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(4,74%,49%,0.09);
}

.c9.c9.c9.c9.c9 img {
  display: block;
  height: 56px;
  width: 56px;
  border-radius: 9999px;
  object-fit: cover;
}

.c6.c6.c6.c6.c6 {
  color: hsla(200,84%,37%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.25rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(150,100%,27%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.25rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(4,74%,49%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.25rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0.c0.c0.c0.c0 > *:not(:first-child) {
  margin-left: -28px;
  z-index: 2;
}

<div>
  <div
    class=" c0"
    data-blade-component="avatar-group"
    role="group"
  >
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          color="information"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <h5
              class="c6"
              data-blade-component="heading"
            >
              NK
            </h5>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          color="positive"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <h5
              class="c8"
              data-blade-component="heading"
            >
              AN
            </h5>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c9"
          color="negative"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <h5
              class="c10"
              data-blade-component="heading"
            >
              RB
            </h5>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvatarGroup /> should render AvatarGroup with size xsmall 1`] = `
.c1.c1.c1.c1.c1 {
  background-color: hsla(0,0%,100%,1);
}

.c3.c3.c3.c3.c3 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(214,28%,84%,1);
}

.c4.c4.c4.c4.c4 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 20px;
  height: 20px;
  width: 20px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(200,84%,44%,0.09);
}

.c4.c4.c4.c4.c4 img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c7.c7.c7.c7.c7 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 20px;
  height: 20px;
  width: 20px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(150,100%,32%,0.09);
}

.c7.c7.c7.c7.c7 img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c9.c9.c9.c9.c9 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 20px;
  height: 20px;
  width: 20px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(4,74%,49%,0.09);
}

.c9.c9.c9.c9.c9 img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c6.c6.c6.c6.c6 {
  color: hsla(200,84%,37%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(4,74%,49%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0.c0.c0.c0.c0 > *:not(:first-child) {
  margin-left: -10px;
  z-index: 2;
}

<div>
  <div
    class=" c0"
    data-blade-component="avatar-group"
    role="group"
  >
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          color="information"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c6"
              data-blade-component="text"
            >
              NK
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c7"
          color="positive"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c8"
              data-blade-component="text"
            >
              AN
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 c2"
      data-blade-component="avatar"
    >
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c9"
          color="negative"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              RB
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
